- CHG: In the repository browser, when a different revision than HEAD is
       set and the revision button is pressed, the set revision is pre-filled
       in the revision selection dialog instead of HEAD. (Stefan)
- CHG: Remote properties are shown in multiple lines instead of all squeezed
       into one single line when shown from the repository browser. (Stefan)
- BUG: Crash in TSVNCache. See issue #91.
- BUG: File context menu shown if more than one folder was
       selected. See issue #92.
- BUG: Lock dialog could show folders. See issue #93.
- BUG: Commit dialog could crash when sorting. See issue #99.
- BUG: Installation for All Users didn't work properly. (Stefan)
- BUG: A file:/// path wasn't recognized as a valid windows path
       and a warning was shown even if the path was valid. (Stefan)
- BUG: The log dialog was always started from the repobrowser
       at HEAD revision instead of the selected revision. (Stefan)
- BUG: Wrong rendering/resizing of the listview in the folder
       browser dialog when exporting. (Stefan)
- BUG: The number of selected items was shown wrong in the commit dialog
       if an unversioned or deleted item was checked. (Stefan)
- BUG: Add 'Compare with WC/BASE' options to 'Check for Modification'.
       See issue #106. (Stefan)
- BUG: The switch command didn't work and crashed. (Stefan)
- BUG: The 'Lock' menu was shown for added files. (Stefan)
- BUG: TortoiseMerge wouldn't save files on UNC paths.
       See issue 108. (Stefan)
- BUG: The "check for modifications" dialog showed a wrong dialog title
       when "Check Repository" was clicked. (Stefan)
- BUG: TortoiseMerge used the wrong encoding to show the files. (Stefan)
- BUG: TortoiseMerge patched files with wrong encodings. (Stefan)
- BUG: After a commit/update/... the file overlay icons weren't properly
       refreshed. (Stefan)
- BUG: Log dialog could crash when clicking "Next 100". (Stefan)
- BUG: The repository browser could crash if it was cancelled during