@@ -361,6 +361,7 @@ private:
 	typedef std::vector<FileEntry*> FileEntryVector;
 	FileEntryVector				m_arStatusArray;
 	std::vector<DWORD>			m_arListArray;
+	CTSVNPathList				m_ConflictFileList;
 	CTSVNPathList				m_tempFileList;
 	CTSVNPathList				m_StatusFileList;
 	CString						m_sLastError;
